--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ cc = "1.0.37"
 [dependencies]
 bitfield = { path = "src/bitfield" }
 bitfield-impl = { path = "src/bitfield/impl" }
-# failure = "*"
+spin = "0.4.8"
+pin-utils = "0.1.0-alpha"
